# renderer

./: .gitignore  CMakeLists.txt  Cargo.toml  Doxyfile  package.toml
latex/: _2_users_2jacquesthurling_2personal-projects_2render_2renderer_2src_2array_8cpp-example.tex  annotated.tex  array_8cpp.tex  array_8h.tex  array_8h_source.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  dirs.tex  display_8cpp.tex  display_8h.tex  display_8h_source.tex  examples.tex  files.tex  main_8cpp.tex  matrix_8cpp.tex  matrix_8h.tex  matrix_8h_source.tex  mesh_8cpp.tex  mesh_8h.tex  mesh_8h_source.tex  refman.tex  structface__t.tex  structmat4__t.tex  structmesh__t.tex  structtriangle__t.tex  structvec2__t.tex  structvec3__t.tex  structvec4__t.tex  triangle_8cpp.tex  triangle_8h.tex  triangle_8h_source.tex  vector_8cpp.tex  vector_8h.tex  vector_8h_source.tex
renderer/: CMakeLists.txt
renderer/.cache/clangd/index/: array.cpp.6254D15D3263D4E4.idx  array.h.8849CD91DB3DF1E9.idx  display.cpp.B325E82C1ABC976B.idx  display.h.BD1E6FC61F295758.idx  main.cpp.4121D03C5ADE2F6A.idx  mesh.cpp.4BF49ABB7991F437.idx  mesh.h.5E14DA2CE229F5CE.idx  triangle.cpp.92CEDF5DC5277D06.idx  triangle.h.E4A0CBFBD6F62278.idx  vector.cpp.66EE4B8F7490CDB9.idx  vector.h.42778E925207FAD5.idx
renderer/src/: array.cpp  array.h  display.cpp  display.h  main.cpp  mesh.h  triangle.cpp  vector.cpp
src/: array.cpp  array.h  constants.rs  display.cpp  display.h  display.rs  macros.rs  main.cpp  main.rs  matrix.cpp  matrix.h  mesh.cpp  mesh.h  mesh.rs  triangle.cpp  triangle.h  triangle.rs  vector.cpp  vector.h  vector.rs
(+27 files in other folders)
